--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,6 +26,6 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: yarn add sass-loader --dev
+    - run: yarn add sass-loader sass
     - run: yarn install
     - run: yarn build
