Added lint step

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,4 +28,5 @@ jobs:
         cache: 'npm'
     - run: yarn add sass-loader sass
     - run: yarn install
+    - run: yarn lint
     - run: yarn build
